# vision-ai-course

./: .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
.docker/: docker-compose.mongo.yaml  docker-compose.serve.yaml
airflow/: pyproject.toml
airflow/.secrets/: .env-scrapping.default
airflow/config/: airflow.cfg
airflow/dags/: data_collection.py
airflow/plugins/common/: models.py  settings.py
configs/: default.yaml  export.yaml  triton.yaml
configs/data/: scrap.yaml
configs/deploy/: triton.yaml
data/: README.md  pyproject.toml
data/.secrets/: .env-storage.default
data/etl/collection/: producer.py  transforms.py
edgecv/: exporter.py  inference.py  main.py  pyproject.toml  tools.py  tritontest.py  video.py
edgecv/core/: buffer.py  dtypes.py  inference_client.py
edgecv/utils/: logger.py  template_filler.py  triton_adaptor.py
model_repository/yolov11-engine/: config.pbtxt
model_repository/yolov11-ensemble/: config.pbtxt
model_repository/yolov11-nms/: config.pbtxt  tools.py
monitoring/dashboards/: dashboards.yaml  hw_perf.json
orchestrator/: pyproject.toml
orchestrator/.secrets/: .env-db.default
orchestrator/flows/: data_collection.py  data_preannotation.py
pipelines/: .env.default  Makefile  pyproject.toml
pipelines/ETL/: pyproject.toml
pipelines/ETL/src/: constants.py  models.py  processors.py
pipelines/common/: models.py  settings.py
pipelines/data/: models.py  processors.py  run.py
pipelines/scrapping/: .env.default  consumer.py  models.py  processors.py  run.py
pipelines/storage/: checks.py  run.py  xx.txt
pipelines/tools/: connector.py
pipelines/tools/aws/: connector.py
pipelines/tools/mongo/: connector.py
plugins/P_NMS_PostProcessing/: tools.py
serving/monitoring/: docker-compose.monitor.yaml
serving/pretrained/: get_model.sh
serving/templates/: T_TritonCustomConfig.jinja  T_TritonEnsembleConfig.jinja  T_TritonModelConfig.jinja
(+14 files in other folders)
