[tool.poetry]
name = "edge-cv"
version = "0.1.0"
description = ""
authors = ["alexandru.razvant <alexandru.razvant@everseen.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ultralytics = "^8.3.1"
docker = "^7.1.0"
fire = "^0.6.0"
omegaconf = "^2.3.0"
loguru = "^0.7.2"
onnx = "^1.16.2"
onnxslim = "^0.1.34"
supervision = "^0.23.0"
av = "^13.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
